--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -5,15 +5,54 @@
 #A1C2F1
 */
 
-.nav-bg {
-    background-color: #E7CEA6;
-    color: #0A6EBD;
+
+.nav{
+    background-color: #0A6EBD;
+    position: sticky;
     height: 80px;
-    width: 100%;
+    align-items: center;
+    
+    
+    
 }
 
-.pad50 {
-    background-color: black;
-    margin: 250px 250px 250px 250px;
-   
+
+
+
+
+.nav-img {
+
+    background-color: #A1C2F1;
+    border-radius: 100px;
+    padding: 8px;
+    margin: 20px 80px;
+    cursor: pointer;
+    
 }
+
+
+
+.buttonnav {
+    color: #0A6EBD;
+    background-color: #A1C2F1;
+    margin: 10px;
+    padding: 10px 50px;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 1s, font;
+    box-sizing: border-box;
+   
+    
+}
+
+a.buttonnav:hover, button.buttonnav:hover {
+    background-color: #5A96E3;
+       
+}
+
+
+
+
+
