--- a/src/components/NewPage.css
+++ b/src/components/NewPage.css
@@ -4,13 +4,38 @@
 .Frame1 {
     width: 100%;
     height: auto;
-    position: "relative";
-    background: "white";
+    /* position: absolute; */
+    
 
 }
 .backgroundimg {
-
+    position: relative;
     width: 100%;
     height: auto;
   
 }
+
+
+.AvailablePackages1
+{
+    background-color: black;
+    margin: auto;
+    width: 42%;
+    height: 12%;
+    position: relative;
+    bottom: 500px;
+   
+   
+ }
+ .Rectangle6Available{
+
+        width: 889;
+        height: 55.02;
+        left: 0;
+        top: 0;
+        position: "relative";
+        background-color: rgba(255, 255, 255, 0.10);
+        border-radius: 4.83;
+   
+
+ }
